--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Quick QuickControls2)
+find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core Quick QuickControls2)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Quick QuickControls2)
 
 link_libraries("tag")
@@ -19,6 +19,7 @@ link_libraries("tag")
 set(PROJECT_SOURCES
         main.cpp
         editor.h editor.cpp
+        file_manager.h file_manager.cpp
         qml.qrc
         toast.h toast.cpp
 )
